--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 </head>
 <body>
     <form action="">
-
+        <input type="text"
+        id="name"
+        placeholder="name">
+        <input type="text"
+        id="naughty"
+        placeholder="naughty%">
+        <input type="text"
+        image
+        placeholder="img link">
+        <button>submit</button>
     </form>
-    
+    <h1>hello</h1>
 
 </body>
 <script src="index.js"></script>
