--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         id="naughty"
         placeholder="naughty%">
         <input type="text"
-        image
+        id="image"
         placeholder="img link">
         <button>submit</button>
     </form>
