getAllCards is functioning

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Naughty or nice</title>
 </head>
 <body>
+    <h1>naughty or nice</h1>
     <form action="">
         <input type="text"
         id="name"
@@ -20,8 +21,9 @@
         placeholder="img link">
         <button>submit</button>
     </form>
-    <h1>hello</h1>
+    <section id="card-container"></section>
 
 </body>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="index.js"></script>
 </html>
