--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>naughty or nice</h1>
-    <form action="">
+    <form id="input-form" action="">
         <input type="text"
         id="name"
         placeholder="name">
@@ -19,7 +19,7 @@
         <input type="text"
         id="image"
         placeholder="img link">
-        <button>submit</button>
+        <button id="submit">submit</button>
     </form>
     <section id="card-container"></section>
 
